@@ -392,12 +392,15 @@ void find_player (int find_next) {
 
   if (!find_next || server_clist->selection == NULL) {
     dialog_ok (NULL, _("Player not found."));
+    reset_main_status_bar();
   }
   else {
     if (dialog_yesno (_("XQF: End of server list reached"), 0, _("Yes"), _("No"),
           _("Continue search from beginning?"))) {
       find_player (FALSE);
     }
+    else
+       reset_main_status_bar();
   }
 }
 
