@@ -228,7 +228,9 @@ extern	struct stat_job *stat_process;
 int compare_qstat_version ( const char* have, const char* expected );
 int start_prog_and_return_fd(char *const argv[], pid_t *pid);
 int check_qstat_version( const char* version );
-extern void play_sound (const char *sound);
+extern	void play_sound (const char *sound);
+
+extern	void reset_main_status_bar();
 
 int filter_start_index;
 
